Fixes #74 #76: Chronological game ordering and missing Georgia dates
#74: Turnover table games now sorted by date before assigning G1, G2, etc
- Marshall (08/30) is now G1 instead of Alabama
- Stable handling for games with missing/unknown dates

#76: Georgia schedule now shows game dates
- Fixed date display logic in index.html
- Dates extracted from parsed game data

Also: Added fresh defense leaderboard cache files from #75 fix

--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@ function scheduleTable(team, games, teamClass) {
     const outliers = computeOutlierMap(games);
     let rows = games.map((g,i) => {
         const w = g.points_for > g.points_against;
-        const dateLabel = formatGameDate(g.date);
+        const dateLabel = formatGameDate(g.date || g.game_date);
         const opponentLabel = formatOpponentLabel(g.opponent, g.opponent_abbr);
         const gameKey = g.game_number || (i + 1);
         const outlierList = outliers[gameKey] || [];
