Fix #72: Display adjusted rank for reversed stats in badges
The renderStatBadge function was calculating adjustedRank for color coding
but displaying the raw rank value. For reversed stats (like penalties where
lower is better), this showed incorrect rankings. Now displays adjustedRank
for all stats, which is correct for both normal and reversed rankings.

--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@ function renderStatBadge(rank, total, reverse=false, conference='') {
     else if (adjustedRank > Math.ceil(total * 0.75)) cls = 'bad';
     else if (adjustedRank > Math.ceil(total * 0.5)) cls = 'low';
     const confLabel = conference ? ` in ${conference}` : '';
-    return `<span class="rank-badge ${cls}">${ordinal(rank)}${confLabel}</span>`;
+    return `<span class="rank-badge ${cls}">${ordinal(adjustedRank)}${confLabel}</span>`;
 }
 
 const RANKING_META = {
